--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,23 @@
 .App {
-  text-align: center;
+  min-height: 100vh;
+  background-image: linear-gradient(45deg, #9aa1ff 0%, #bb8b54 99%, #4d57e4 100%);
 }
 
+.search-form{
+  min-height: 10vh;
+  display: flex;
+  justify-content: center;
+}
 
+.search-bar{
+  width: 50%;
+  border: none;
+  padding: 10px;
+  align-items: center;
+}
+
+.recipes{
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
